--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,21 +17,26 @@
 }
 
 .brandlogo{
-  width:35px;
-  height:35px;
+  width:42px;
+  height:42px;
   border-radius:30px;
   border:2px solid lightgrey;
+  margin: 0px 3px 0px;
 }
 
 .brand{
-  font-size:16px;
+  font-size:20px;
   font-weight: bold;
+  color:rgb(33, 33, 34)
 }
 
 i.fa-eye-slash,i.fa-eye{
   position:absolute;
   right:30px;
   margin-top:-36px;
+}
+.vh-100{
+  height:100vh !important;
 }
 
 
